Add Flyway support and V1 migration; add validation for size of each search query param; Change ApiError class to store list of messages

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,11 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=
-spring.datasource.password=
+spring.datasource.url=jdbc:postgresql://localhost:5432/mydb
+spring.datasource.username=postgres
+spring.datasource.password=super
 spring.jpa.show-sql=true
 
 #include in json fields without @JsonView
 spring.jackson.mapper.default-view-inclusion=true
 
+spring.jpa.hibernate.ddl-auto=validate
+
 springdoc.paths-to-match=/api/**
-#springdoc.swagger-ui.url=/api-docs-custom.yaml
